# rp-pico-as3935-driver

./: CMakeLists.txt  README.md  main.c
include/: as3935.h
src/: as3935.c
